--- a/server/analysis_scripts/volatile/connections.cnf
+++ b/server/analysis_scripts/volatile/connections.cnf
@@ -1,38 +1,38 @@
 [local]
-host = 192.168.150.132
+host = 127.0.0.1
 port = 3306
-user = swatsrs
-password = dynaslope
+user = softwareinfra
+password = dynaslope2020
 schema = analysis_db
 
 
 [gsm_pi]
-host = 192.168.150.132
+host = 127.0.0.1
 port = 3306
-user = swatsrs
-password = dynaslope
+user = softwareinfra
+password = dynaslope2020
 schema = comms_db
 
 
 [analysis]
-host = 192.168.150.132
+host = 127.0.0.1
 port = 3306
-user = swatsrs
-password = dynaslope
+user = softwareinfra
+password = dynaslope2020
 schema = analysis_db
 
 
 [website]
-host = 192.168.150.132
+host = 127.0.0.1
 port = 3306
-user = swatsrs
-password = dynaslope
+user = softwareinfra
+password = dynaslope2020
 schema = ewi_db
 
 
 [common]
-host = 192.168.150.132
+host = 127.0.0.1
 port = 3306
-user = swatsrs
-password = dynaslope
+user = softwareinfra
+password = dynaslope2020
 schema = commons_db
