--- a/server/dynaslope3/requirements.txt
+++ b/server/dynaslope3/requirements.txt
@@ -1,90 +1,104 @@
+aenum==2.2.6
+alabaster==0.7.12
 amqp==2.6.1
-bcrypt
-beautifulsoup4==4.9.1
-bidict
+argh==0.26.2
+argon2-cffi==20.1.0
+asn1crypto==1.4.0
+astroid==2.4.2
+astropy==4.0.2
+async-generator==1.10
+atomicwrites==1.4.0
+attrs==20.3.0
+autopep8==1.5.4
+Babel==2.8.1
+backcall==0.2.0
+bcrypt==3.2.0
+beautifulsoup4==4.9.3
+bidict==0.21.2
 billiard==3.6.3.0
+bitarray==1.6.1
+bkcharts==0.2
+bleach==3.2.1
+bokeh==2.2.3
+boto==2.49.0
+Bottleneck==1.3.2
 brotlipy==0.7.0
-celery==4.4.2
-certifi==2020.12.5
-cffi
-chardet
-click
-cryptography
+celery==4.4.4
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
+cloudpickle==1.6.0
+clyent==1.2.2
+colorama==0.4.4
+contextlib2==0.6.0.post1
+cryptography==3.1.1
 cycler==0.10.0
+Cython==0.29.21
+cytoolz==0.11.0
+dask==2.30.0
+decorator==4.4.2
+defusedxml==0.6.0
+diff-match-patch==20200713
+distributed==2.30.1
 dnspython==1.16.0
-eventlet
+docutils==0.16
+entrypoints==0.3
+et-xmlfile==1.0.1
+eventlet==0.30.0
+exponent-server-sdk==2.0.0
+fastcache==1.1.0
+fbchat==1.9.7
+filelock==3.0.12
+flake8==3.8.4
 Flask==1.1.2
-Flask-Bcrypt
-Flask-Cors==3.0.9
-Flask-JWT-Extended
+Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.10
+Flask-JWT-Extended==3.25.0
 Flask-Login==0.5.0
 flask-marshmallow==0.14.0
 Flask-SocketIO==5.0.1
-Flask-SQLAlchemy
+Flask-SQLAlchemy==2.4.4
 fpdf==1.7.2
-gevent
+fsspec==0.8.3
+future==0.18.2
+geographiclib==1.52
+geopy==2.2.0
+gevent==20.9.0
 gevent-websocket==0.10.1
-greenlet
-idna
+glob2==0.7
+gmpy2==2.0.8
+greenlet==0.4.17
+h5py==2.10.0
+HeapDict==1.0.1
+html5lib==1.1
+idna==2.10
+imageio==2.9.0
+imagesize==1.2.0
 img2pdf==0.4.0
-importlib-metadata==1.7.0
-iso8601==0.1.12
+importlib-metadata==2.0.0
+iniconfig==1.1.1
+intervaltree==3.1.0
+ipykernel==5.3.4
+ipython==7.19.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+iso8601==0.1.13
+isort==5.6.4
 itsdangerous==1.1.0
-Jinja2 
-joblib==0.16.0
-kiwisolver==1.2.0
-kombu==4.6.11
-lxml==4.5.2
-MarkupSafe
-marshmallow==3.10.0
-marshmallow-sqlalchemy==0.24.2
-matplotlib==3.3.1
-monotonic==1.5
-mysqlclient
-numpy
-pandas==1.0.1
-pandas-datareader==0.9.0
-patsy==0.5.1
-phantomjs==1.3.0
-pikepdf==1.19.3
-Pillow==7.2.0
-pycosat==0.6.3
-pycparser
-pyfinance==1.2.7
-PyJWT==1.7.1
-PyMySQL==0.9.3
-pyOpenSSL
-pyparsing==2.4.7
-pyserial==3.4
-PySocks
-python-dateutil
-python-engineio
-python-gsmmodem==0.9
-python-memcached==1.59
-python-socketio
-pytz
-PyYAML==5.3.1
-redis==3.5.3
-requests
-ruamel-yaml==0.15.87
-scikit-learn==0.23.2
-scipy==1.5.2
-seaborn==0.11.0
-selenium
-serial==0.0.97
-simplejson==3.17.6
-six
-soupsieve==2.0.1
-SQLAlchemy
-statsmodels==0.12.0
-threadpoolctl==2.1.0
-tqdm
-urllib3
-vine==1.3.0
-Werkzeug
-xlrd==1.2.0
-xmltodict==0.12.0
-zipp==3.1.0
-zope.event==4.5.0
-zope.interface
-exponent_server_sdk
+jdcal==1.4.1
+jedi==0.17.1
+jeepney==0.5.0
+Jinja2==2.11.2
+joblib==0.17.0
+json5==0.9.5
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.7
+jupyter-console==6.2.0
+jupyter-core==4.6.3
+jupyterlab==2.2.6
+jupyterlab-pygments==0.1.2
