--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@mui/lab": "^5.0.0-alpha.81",
     "@mui/material": "^5.6.2",
     "@mui/styles": "^5.8.0",
+    "@mui/x-date-pickers": "^5.0.14",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "dayjs": "^1.11.2",
+    "embla-carousel-react": "^7.0.5",
     "formik": "^2.2.9",
     "highcharts": "^10.1.0",
     "highcharts-react-official": "^3.1.0",
@@ -35,6 +37,7 @@
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
+    "react-zoom-pan-pinch": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
