--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "formik": "^2.2.9",
     "highcharts": "^10.1.0",
     "highcharts-react-official": "^3.1.0",
+    "http-server": "^14.1.1",
     "i": "^0.3.7",
     "leaflet": "^1.8.0",
     "mui-datatables": "^4.2.2",
