--- a/server/analysis_scripts/volatile/connections.cnf
+++ b/server/analysis_scripts/volatile/connections.cnf
@@ -1,38 +1,38 @@
 [local]
-host = 127.0.0.1
+host = 192.168.150.169
 port = 3306
-user = softwareinfra
-password = dynaslope2020
+user = swatsrs
+password = dynaslope
 schema = analysis_db
 
 
 [gsm_pi]
-host = 127.0.0.1
+host = 192.168.150.169
 port = 3306
-user = softwareinfra
-password = dynaslope2020
+user = swatsrs
+password = dynaslope
 schema = comms_db
 
 
 [analysis]
-host = 127.0.0.1
+host = 192.168.150.169
 port = 3306
-user = softwareinfra
-password = dynaslope2020
+user = swatsrs
+password = dynaslope
 schema = analysis_db
 
 
 [website]
-host = 127.0.0.1
+host = 192.168.150.169
 port = 3306
-user = softwareinfra
-password = dynaslope2020
+user = swatsrs
+password = dynaslope
 schema = ewi_db
 
 
 [common]
-host = 127.0.0.1
+host = 192.168.150.169
 port = 3306
-user = softwareinfra
-password = dynaslope2020
+user = swatsrs
+password = dynaslope
 schema = commons_db
