--- a/server/analysis_scripts/volatile/dyna_config.cnf
+++ b/server/analysis_scripts/volatile/dyna_config.cnf
@@ -1,7 +1,7 @@
 [Hosts]
-local = 127.0.0.1
-gsm = 127.0.0.1
-sandbox = 127.0.0.1
+local = 192.168.150.132
+gsm = 192.168.150.132
+sandbox = 192.168.150.132
 
 
 [Resource]
@@ -24,9 +24,9 @@ ops = common,analysis,gsm_pi,website
 
 
 [Db]
-password = dynaslope2020
+password = dynaslope
 name = analysis_db
-user = softwareinfra
+user = swatsrs
 
 
 [Serial]
@@ -136,5 +136,5 @@ send_ack_to_ct_phone = True
 print_stdout = True
 
 [wss_credentials]
-host = 127.0.0.1
+host = localhost
 port = 5050
